# minerva-plugins

./: .gitignore  README.md  go.work  registry.json
3d-gen/: .gitignore  Cargo.toml  manifest.json
agent-relay/: Cargo.toml  README.md  manifest.json
cad/: README.md  embedded_python_spawn_test.go  go.mod  main.go  main_test.go  manifest.json
codetools/: .gitignore  go.mod  main.go  main_host_test.go  main_test.go  manifest.json  spawn_test.go
codetools/worker/: pyproject.toml
codetools/worker/codetools_worker/: __init__.py  __main__.py  _layout.py  code_visualizer.py  dispatcher.py  envelope.py  errors.py  godot_diagnostics.py  methods.py  router.py  sightline_probe.py
codetools/worker/codetools_worker/files/: __init__.py  bash_handler.py  cwd_handler.py  glob_handler.py  grep_handler.py  paths.py  policy.py  rg_finder.py  runner.py  walker.py
codetools/worker/tests/: conftest.py  test_code_visualizer_functional.py  test_code_visualizer_git_scope.py  test_code_visualizer_staleness.py  test_editor_assist.py  test_envelope.py  test_files_bash.py  test_files_bash_host_hook.py  test_files_cwd.py  test_files_glob.py  test_files_glob_recursive.py  test_files_grep.py  test_get_graph.py  test_godot_diagnostics.py  test_inspect_run.py  test_inspect_stop.py  test_router.py  test_sightline_p33.py  test_sightline_p36_replay.py  test_sightline_probe.py  test_sightline_probe_schema_guard.py
codetools/worker/tests/fixtures/godot_project/: enemy.gd  game_manager.gd  main.tscn  player.gd
codetools/worker/tests/fixtures/probe/: debugger_state.v3.json
docs/: MEDIA_PLUGINS_BUILD_PROTOCOL.md  PLUGIN_API_COVERAGE.md  PLUGIN_DEVELOPER_GUIDE.md  plugins.dct
drive/: .gitignore  Cargo.toml  README.md  manifest.json
drive/src/: artifact_client.rs  main.rs  sync.rs
drive/ui/: DrivePanel.gd  DrivePanel.tscn
movie-gen/: .gitignore  Cargo.toml  manifest.json
movie-gen/src/: main.rs
movie-gen/ui/: MovieGenPanel.gd  MovieGenPanel.tscn
nametag-maker/: .gitignore  faces_test.go  generate.go  generate_test.go  go.mod  layout.go  layout_test.go  main.go  manifest.json  rca_followup_test.go  sheet.go  sheet_test.go  types.go
pcb/: go.mod  libraries.lock.json  main.go  main_test.go  manifest.json
pcb/worker/: pyproject.toml
pcb/worker/agent_router/: README.md  __init__.py  board.py  cli.py  grid.py  hints.py  kicad_io.py  layers.py  pathfinder.py  router.py  visualizer.py  yaml_loader.py
pcb/worker/pcb_worker/: __init__.py  __main__.py  board_model.py  board_schema.py  board_validate.py  canonical_id.py  compile_board.py  dispatcher.py  drc.py  drc_geom_primitives.py  drc_geometric.py  fab_capability.py  footprint_def.py  footprints.py  framing.py  geometry.py  gerber.py  ir_adapter.py  ir_projection.py  kicad.py  libcheck.py  methods.py  pad_source.py  pad_types.py  resolve.py  resolved_board.py  route_bridge.py
pcb/worker/tests/: gerber_fab.py  test_board_v2_vectors.py  test_cam_conformance.py  test_canonical_id.py  test_compile_board.py  test_determinism_gate.py  test_draft_check.py  test_drc.py  test_drc_geometric.py  test_fab_capability.py  test_footprint_def.py  test_footprints.py  test_geometry.py  test_gerbers.py  test_ir_adapter.py  test_ir_fab.py  test_kicad_cli_boundary.py  test_layer_contract.py  test_libcheck.py  test_methods.py  test_methods_drc_geometric.py  test_methods_ir_fab.py  test_normalize.py  test_pad_types.py  test_resolve.py  test_resolved_board.py  test_rotation.py  test_route_as_drawn.py  test_route_bridge.py  test_route_drc.py  test_step3_resolve_fab.py  test_worker_smoke.py
pcb/worker/tests/agent_router/: __init__.py  conftest.py  test_board.py  test_bus_routing.py  test_grid.py  test_hints.py  test_kicad_io.py  test_pathfinder.py  test_router.py  test_visualizer.py
pcb/worker/tests/agent_router/fixtures/: board_with_holes.kicad_pcb  crossing_nets.kicad_pcb  rotated_component.kicad_pcb  star_net.kicad_pcb  three_resistors.kicad_pcb  two_pads.kicad_pcb
pcb/worker/tests/oracle/: __init__.py  geometry_diff.py  kicad_drc.py  provenance.py  test_cam_golden_provenance.py  test_drill_slot_ipc356_diff.py  test_geometry_diff.py  test_gerbonara_roundtrip.py  test_kicad_drc_geometric_oracle.py  test_kicad_drc_oracle.py  test_kicad_gerber_export_oracle.py  test_provenance.py
pcb/worker/tests/oracle/golden_emitter/: README.md  board-B_Cu.gbr  board-Edge_Cuts.gbr  board-F_Cu.gbr  board-F_Mask.gbr  board-F_SilkS.gbr
pcb/worker/tests/testdata/: k1_bottom_oracle.json  k1_bottom_oracle.kicad_pcb
pcb/worker/tests/testdata/fixture_lib/: Device.kicad_sym
pcb/worker/tests/testdata/fixture_lib/Resistor_SMD.pretty/: R_0603_1608Metric.kicad_mod  R_0805_2012Metric.kicad_mod
pcb/worker/tests/testdata/fixture_lib/a1_footprints/Capacitor_SMD.pretty/: C_0402_1005Metric.kicad_mod
pcb/worker/tests/testdata/fixture_lib/a1_footprints/Package_SO.pretty/: SOIC-8_3.9x4.9mm_P1.27mm.kicad_mod
pcb/worker/tests/testdata/footprints/: smart-remote-orig.yaml
pcb/worker/tests/testdata/gerber_boards/: drilltest.yaml
pcb/worker/tests/testdata/gerber_golden/: README.md  board-B_Mask.gbr  board-F_Cu.gbr  board-F_Mask.gbr  board-F_SilkS.gbr  board-NPTH.drl  board-PTH.drl  drilltest-B_Cu.gbr  drilltest-B_Mask.gbr  drilltest-Edge_Cuts.gbr  drilltest-F_Cu.gbr  drilltest-F_Mask.gbr  drilltest-F_SilkS.gbr  drilltest-NPTH.drl  drilltest-PTH.drl  regenerate.py
pcb/worker/tests/testdata/k1_lossless/: PAD_FIELDS.kicad_mod  UNSUPPORTED.kicad_mod
presentation/: README.md  main.go  main_test.go  manifest.json
shared/rust/minerva-media-client/: Cargo.toml
shared/rust/minerva-media-client/src/: frames.rs  lib.rs  wire.rs
(+282 files in other folders)
