[package]
name = "drive-plugin"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "drive-plugin"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
tungstenite = { version = "0.24", features = ["native-tls"] }
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
ureq = { version = "2", features = ["json"] }
