[project]
name = "pcb-plugin-worker"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
# pyyaml is the ONE hard runtime dependency — the worker parses/loads the
# canonical board YAML with it, and cold start imports it eagerly.
dependencies = [
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
# circuit_synth (PyPI: "circuit-synth", import name "circuit_synth", v0.12.1
# verified importable on CPython 3.12.4 in ~0.4s) is PINNED but OPTIONAL.
#
# It is not a hard dependency because it cannot do the worker's job without
# KiCad *symbol-library* data on the machine — Component(symbol="Device:R")
# raises LibraryNotFound when KICAD_SYMBOL_DIR is unset — and its generator
# imposes its own auto-placement rather than honouring our authored
# x_mm/y_mm/rotation_deg. validate/generate/check_bom/check_libraries therefore
# run in plain Python over the canonical YAML (see kicad.py / board_model.py and
# docs/worker.md "circuit_synth divergence"). The worker probes its version via
# importlib.metadata (no import) and never blocks on it. Install this extra only
# if a future child wants circuit_synth's netlister/ERC with real KiCad libs.
circuit_synth = [
    "circuit-synth==0.12.1",
]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pcb_worker"]
