[package]
name = "minerva-media-client"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tungstenite = { version = "0.24", features = ["native-tls"] }
ureq = { version = "2", features = ["json"] }
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
